# Arcium-messenger-

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_CONTEXT.md  README.md  Read.md
.cargo/: audit.toml
.claude/: plugins.json
.devcontainer/: devcontainer.json  setup.sh
.github/actions/uniffi-android-bridge/: action.yml
.github/workflows/: android-build-baseline.yml  android-ci.yml  android-native-bridge.yml  arcium-ci.yml  gdrive-sync.yml  graphify.yml  karpathy-review.yml  monthly-backup.yml  native-artifact-baseline.yml  pi-gemini-review.yml  pi-review.yml  security-review.yml  test-api-key.yml  understand-anything.yml
.pi/: settings.json
.pi/taskflows/: arcium-verify.json
android/: README.md  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/arcium/messenger/: ArciumApp.kt  MainActivity.kt
android/app/src/main/kotlin/com/arcium/messenger/data/: ContactRepository.kt  IdentityRepository.kt  MessageRepository.kt
android/app/src/main/kotlin/com/arcium/messenger/di/: DataModule.kt
android/app/src/main/kotlin/com/arcium/messenger/ffi/: ArciumCore.kt  RustBridgeCheck.kt
android/app/src/main/kotlin/com/arcium/messenger/network/: BluetoothMeshManager.kt  SolanaClient.kt  TorManager.kt
android/app/src/main/kotlin/com/arcium/messenger/security/: MasterKeyProvider.kt
android/app/src/main/kotlin/com/arcium/messenger/ui/chat/: ChatScreen.kt  ChatViewModel.kt
android/app/src/main/kotlin/com/arcium/messenger/ui/contacts/: ContactsScreen.kt  ContactsViewModel.kt
android/app/src/main/kotlin/com/arcium/messenger/ui/navigation/: AppNavigation.kt
android/app/src/main/kotlin/com/arcium/messenger/ui/onboarding/: ExistingIdentityScreen.kt  OnboardingScreen.kt  OnboardingViewModel.kt
android/app/src/main/kotlin/com/arcium/messenger/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/kotlin/com/arcium/messenger/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: themes.xml
android/gradle/: libs.versions.toml
arcium-psi/: .gitattributes  .gitignore  Anchor.toml  Cargo.toml
arcium-psi/encrypted-ixs/: Cargo.toml
arcium-psi/encrypted-ixs/src/: lib.rs
arcium-psi/programs/arcium-psi/: Cargo.toml
arcium-psi/programs/arcium-psi/src/: lib.rs
arcium-psi/tests/: .env.example  package-lock.json  package.json
arcium-psi/tests/src/: client.ts  crypto.test.ts  program.ts  scenarios.test.ts  setup.test.ts  setup.ts  utils.ts
crates/core-crypto/: Cargo.toml
crates/core-crypto/src/: contact_hash.rs  hybrid.rs  lib.rs  ratchet.rs  rescue.rs  x3dh.rs
crates/core-crypto/src/crates/core-crypto/src/: x3dh.rs
crates/core-protocol/: Cargo.toml
crates/core-protocol/src/: lib.rs
crates/core-storage/: Cargo.toml
crates/core-storage/src/: lib.rs
crates/core-transport/: Cargo.toml
crates/core-transport/src/: lib.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: lib.rs
crates/security-events/: Cargo.toml
crates/security-events/src/: lib.rs
docs/: HOME-DEPLOY.md  PRE-RELEASE-CHECKLIST.md  SECURITY-FINDINGS.md  SECURITY-REVIEW-2026-06-deep.md
docs/ai-agent-spec/: AI_AGENT_BOUNDARY.md  SECURITY_EVENT_CATALOG.md  SECURITY_EVENT_ENGINE_IMPLEMENTATION_PLAN.md  SECURITY_EVENT_ENGINE_SPEC.md
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
research/src-qiwi/: AGENT_STATE.md  AUTONOMOUS_RESEARCH_AGENT_SPEC_v1.0.md  HANDOVER.md  OBJECT_OF_STUDY.md  OBSERVATIONS.md  PROJECT_SCOPE.md  README.md  REMAINING_HANDOFF_RISKS.md  REPOSITORY_MAP.md  SRC_QIWI_GOVERNOR_v2.1.md  cases.md  predictions.md
research/src-qiwi/archive/audits/: behavioral-protocol-test-2026-06-16.md  final-gap-audit-2026-06-16.md  project-purpose-consumer-audit-2026-06-16.md
research/src-qiwi/archive/conversations/: origins-batch-001.md  repository-evolution-batch-001.md  session-origin-2026-06-15.md
research/src-qiwi/archive/investigations/: excerpt2-evidence-ceiling-2026-06-16.md
research/src-qiwi/archive/reviews/: README.md
research/src-qiwi/governance/: UNIFIED_PORTABLE_WORKING_CONSTITUTION_v0.4.md
src/: lib.rs
