[workspace]
resolver = "2"
members = [
    "crates/core-crypto",
    "crates/core-protocol",
    "crates/core-storage",
    "crates/core-transport",
    "crates/mobile-ffi",
    "crates/security-events",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
thiserror = "1"
indexmap = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true 