[package]
name = "core-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand_core.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"