[package]
name = "core-transport"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
# default-features = false drops arti-client's default "native-tls" feature,
# which pulls async-native-tls -> native-tls -> openssl-sys and breaks Android
# cross-compilation (no OpenSSL sysroot for *-linux-android). TLS is provided
# by the explicit "rustls" feature instead. "tokio" and "compression" are
# re-added explicitly to keep everything else the defaults provided.
arti-client = { version = "0.21", default-features = false, features = [
    "tokio",
    "rustls",
    "compression",
    "onion-service-client",
    "onion-service-service",
] }
tor-rtcompat = { version = "0.21", features = ["tokio", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
futures = "0.3"
thiserror.workspace = true
anyhow = "1"
core-crypto = { path = "../core-crypto" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"