[package]
name = "mobile-ffi"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "arcium_core"

[dependencies]
uniffi = { version = "0.28", features = ["build"] }
core-crypto = { path = "../core-crypto" }
core-storage = { path = "../core-storage" }
core-transport = { path = "../core-transport" }
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand_core.workspace = true
thiserror.workspace = true
log = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
